[gd_scene load_steps=29 format=2]

[ext_resource path="res://Textures/Player/Cockel/Blonde/Down1.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Textures/Player/Cockel/Blonde/LeftStrike2.png" type="Texture" id=3]
[ext_resource path="res://Textures/Player/Cockel/Blonde/Up3.png" type="Texture" id=4]
[ext_resource path="res://Textures/Player/Cockel/Blonde/Up2.png" type="Texture" id=5]
[ext_resource path="res://Textures/Player/Cockel/Blonde/Down3.png" type="Texture" id=6]
[ext_resource path="res://Textures/Player/Cockel/Blonde/LeftStrike1.png" type="Texture" id=7]
[ext_resource path="res://Textures/Player/Cockel/Blonde/Left2.png" type="Texture" id=8]
[ext_resource path="res://Textures/Player/Cockel/Blonde/LeftStrike3.png" type="Texture" id=9]
[ext_resource path="res://Textures/Player/Cockel/Blonde/Left3.png" type="Texture" id=10]
[ext_resource path="res://Textures/Player/Cockel/Blonde/RightStrike3.png" type="Texture" id=11]
[ext_resource path="res://Textures/Player/Cockel/Blonde/Right1.png" type="Texture" id=12]
[ext_resource path="res://Textures/Player/Cockel/Blonde/DownStrike1.png" type="Texture" id=13]
[ext_resource path="res://Textures/Player/Cockel/Blonde/DownStrike2.png" type="Texture" id=14]
[ext_resource path="res://Textures/Player/Cockel/Blonde/UpStrike1.png" type="Texture" id=15]
[ext_resource path="res://Textures/Player/Cockel/Blonde/DownStrike3.png" type="Texture" id=16]
[ext_resource path="res://Textures/Player/Cockel/Blonde/Down2.png" type="Texture" id=17]
[ext_resource path="res://Textures/Player/Cockel/Blonde/RightStrike2.png" type="Texture" id=18]
[ext_resource path="res://Textures/Player/Cockel/Blonde/UpStrike3.png" type="Texture" id=19]
[ext_resource path="res://Textures/Player/Cockel/Blonde/Left1.png" type="Texture" id=20]
[ext_resource path="res://Textures/Player/Cockel/Blonde/RightStrike1.png" type="Texture" id=21]
[ext_resource path="res://Textures/Player/Cockel/Blonde/Right2.png" type="Texture" id=22]
[ext_resource path="res://Textures/Player/Cockel/Blonde/UpStrike2.png" type="Texture" id=23]
[ext_resource path="res://Textures/Player/Cockel/Blonde/Up1.png" type="Texture" id=24]
[ext_resource path="res://Textures/Player/Cockel/Blonde/Right3.png" type="Texture" id=25]

[sub_resource type="CapsuleShape2D" id=1]
height = 12.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 16 ), ExtResource( 14 ) ],
"loop": false,
"name": "AttackDown",
"speed": 8.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 9 ), ExtResource( 3 ) ],
"loop": false,
"name": "AttackLeft",
"speed": 8.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 18 ), ExtResource( 11 ) ],
"loop": false,
"name": "AttackRight",
"speed": 8.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 23 ), ExtResource( 19 ) ],
"loop": false,
"name": "AttackUp",
"speed": 8.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 17 ), ExtResource( 6 ) ],
"loop": true,
"name": "Down",
"speed": 8.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 8 ), ExtResource( 10 ) ],
"loop": true,
"name": "Left",
"speed": 8.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 22 ), ExtResource( 25 ) ],
"loop": true,
"name": "Right",
"speed": 8.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 5 ), ExtResource( 4 ) ],
"loop": true,
"name": "Up",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 12, 4.5 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "Down"
frame = 1

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )
smoothing_enabled = true

[node name="AttackPivot" type="Area2D" parent="."]

[node name="WeaponHitbox" type="CollisionShape2D" parent="AttackPivot"]
position = Vector2( 0, 14 )
shape = SubResource( 3 )

[node name="InteractArea" type="Area2D" parent="."]

[node name="InteractionBox" type="CollisionShape2D" parent="InteractArea"]
position = Vector2( 0, 16 )
shape = SubResource( 3 )

[node name="Position" type="Position2D" parent="."]
position = Vector2( 0, 14 )

[connection signal="body_entered" from="AttackPivot" to="." method="_on_AttackPivot_body_entered"]
[connection signal="body_entered" from="InteractArea" to="." method="_on_InteractArea_body_entered"]
